--- a/app/index.html
+++ b/app/index.html
@@ -8,5 +8,6 @@
 
 	</div>
 </body>
+<script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bundle.js"></script>
 </html>
